--- a/build.gradle
+++ b/build.gradle
@@ -201,7 +201,7 @@ Arch.values().each { arch ->
         prepareTask = extractServerVmWin32
     }
 
-    def zipTask = task("zip$archCap", type: Tar, dependsOn: prepareTask) {
+    def zipTask = task("zip$archCap", type: Zip, dependsOn: prepareTask) {
         destinationDir buildDir
         classifier arch.name()
 		from(outDir) {
